--- a/assets/stylesheets/typography.css.sass
+++ b/assets/stylesheets/typography.css.sass
@@ -17,7 +17,7 @@ small
   font-size: 13px
 
 .delete-link
-  color: #c70000
+  color: #c70000!important 
 
 .rw-style
   border-bottom: 1px solid #ff0000
